css/style.css
/* ... */
    .resume-wrap .icon span {
      color: #fff;
      font-size: 28px; }
  .resume-wrap .text {
    width: calc(100% - 50px); }
  .resume-wrap .date {
    font-weight: 700;
    font-size: 16px;
    color: rgba(0, 0, 0, 0.6);
    color: #3e64ff; }
  .resume-wrap h2 {
    font-size: 24px;
    font-weight: 700; }
  .resume-wrap .position {
    font-size: 18px;
    font-weight: 700;
    color: #000000; }

.ftco-partner {
  padding: 4em 0 !important; }
  .ftco-partner .partner {
    display: block;
    padding: 0 20px; }
    @media (max-width: 991.98px) {
      .ftco-partner .partner {
        padding: 0 70px;
        margin-bottom: 40px; } }

.services-1 {
  margin-bottom: 40px;
  padding: 2em;
  background: rgba(255, 255, 255, 0.1);
  width: 100%; }
  .services-1 .icon {
    display: block;
    margin-bottom: 30px; }
    .services-1 .icon i {
      font-size: 60px;
      line-height: 1.0;
      color: #3e64ff; }
  .services-1 .desc h3 {
    line-height: 1.3;
    font-size: 13px;
    font-weight: 500;
    letter-spacing: 3px;
    text-transform: uppercase;
    position: relative;
    color: #000000; }
    .services-1 .desc h3:after {
      position: absolute;
      bottom: -15px;
      left: 0;
      right: 0;
      content: '';
      width: 30px;
      height: 1px;
      background: #3e64ff;
      margin: 0 auto; }
    .services-1 .desc h3 a {
      color: #fff; }
  .services-1 .desc h4 {
    font-size: 20px;
    font-weight: 300;
    margin-bottom: 18px; }
  .services-1 .desc span {
    display: block;
    text-transform: uppercase;
    font-size: 12px;
    margin-bottom: 10px;
    color: #3e64ff; }
  .services-1 .desc p {
    color: rgba(0, 0, 0, 0.7); }
  .services-1:hover {
    background: #3e64ff; }
    .services-1:hover .icon i {
      color: #fff; }
    .services-1:hover h3 {
      color: #000000; }
      .services-1:hover h3:after {
        background: #000000; }

.progress-wrap {
  width: 100%;
  margin-bottom: 30px; }
  .progress-wrap h3 {
    font-size: 16px;
    margin-bottom: 10px;
    font-weight: 500; }

.progress {
  height: 10px;
  -webkit-box-shadow: none;
  box-shadow: none;
  background: #e6e6e6;
  overflow: visible; }

.progress-bar {
  background: #3e64ff;
  -webkit-box-shadow: none;
  box-shadow: none;
  font-size: 12px;
  line-height: 1.2;
  color: #000000;
  font-weight: 600;
  position: relative;
  overflow: visible;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  border-radius: 2px; }
  .progress-bar:after {
    position: absolute;
    top: -2px;
    right: 0;
    width: 34px;
    height: 34px;
    content: '';
    background: #3e64ff;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    border-radius: 2px;
    opacity: 0; }
  .progress-bar span {
    position: absolute;
    top: -38px;
    right: 0;
    font-size: 16px;
    font-weight: 500;
    color: #000000; }

.progress-circle .progress {
  width: 150px;
  height: 150px;
  background: none;
  position: relative; }

.progress-circle .progress::after {
  content: "";
  width: 100%;
  height: 100%;
  border-radius: 50%;
  border: 6px solid #eee;
  position: absolute;
  top: 0;
  left: 0; }

.progress-circle .progress > span {
  width: 50%;
  height: 100%;
  overflow: hidden;
  position: absolute;
  top: 0;
  z-index: 1; }

.progress-circle .progress .progress-left {
  left: 0; }

.progress-circle .progress .progress-bar {
  width: 100%;
  height: 100%;
  background: none;
  border-width: 6px;
  border-style: solid;
  position: absolute;
  top: 0; }

.progress-circle .progress .progress-left .progress-bar {
  left: 100%;
  border-top-right-radius: 80px;
  border-bottom-right-radius: 80px;
  border-left: 0;
  -webkit-transform-origin: center left;
  -ms-transform-origin: center left;
  transform-origin: center left; }

.progress-circle .progress .progress-right {
  right: 0; }

.progress-circle .progress .progress-right .progress-bar {
  left: -100%;
  border-top-left-radius: 80px;
  border-bottom-left-radius: 80px;
  border-right: 0;
  -webkit-transform-origin: center right;
  -ms-transform-origin: center right;
  transform-origin: center right; }

.progress-circle .progress .progress-value {
  position: absolute;
  top: 0;
  left: 0; }

.ftco-hireme {
  background: #3e64ff;
  z-index: 0;
  position: relative; }
  .ftco-hireme .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: '';
    background: #3e64ff;
    opacity: .7; }
  .ftco-hireme h2 {
    color: #fff;
    font-size: 40px;
    font-weight: 900; }
    .ftco-hireme h2 span {
      color: #a0f669; }
  .ftco-hireme p {
    color: rgba(255, 255, 255, 0.9); }

.project {
  width: 100%;
  height: 350px;
  margin-bottom: 0;
  position: relative;
  z-index: 0; }
  .project.img-2 {
    height: 600px; }
    @media (max-width: 767.98px) {
      .project.img-2 {
        height: 285px; } }
    .project.img-2 .text {
      max-width: 45%;
      z-index: 1; }
      .project.img-2 .text h3 {
        font-size: 22px; }
        .project.img-2 .text h3 a {
          color: #fff; }
      .project.img-2 .text span {
        color: rgba(255, 255, 255, 0.8);
        text-transform: uppercase;
        letter-spacing: 2px; }
      @media (max-width: 767.98px) {
        .project.img-2 .text {
          max-width: 100%;
          opacity: 1; }
          .project.img-2 .text span {
            color: rgba(255, 255, 255, 0.8); } }
  .project .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: '';
    opacity: 0;
    background: #3e64ff;
    z-index: -1;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    -webkit-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    transition: all 0.3s ease; }
    @media (max-width: 767.98px) {
      .project .overlay {
        opacity: .2; } }
/* ... */

